pagina entrenaminto agregada

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       <p>Tiempo: <span id="time">30</span> segundos</p>
     </div>
     <button id="start-button">Iniciar Juego</button>
+    <br>
+    <!-- Botón para redirigir al entrenamiento de teclado -->
+    <a href="entrenamiento.html">
+      <button id="training-button">Ir al Entrenamiento de Teclado</button>
+    </a>
   </div>
   <script src="script.js"></script>
 </body>
