Agregada la pagina "Entrenamiento de columnas"

--- a/entrenamiento.html
+++ b/entrenamiento.html
@@ -20,6 +20,10 @@
     <button id="training-start-button">Iniciar Entrenamiento</button>
     <p>Puntaje: <span id="training-score">0</span></p>
     <div id="training-string"></div>
+    <a href="index.html">
+      <button id="back-to-home-button">Volver al Inicio</button>
+    </a>
+    
   </div>
   <script src="scriptsEntrenaminto.js"></script>
 </body>
