--- a/index.html
+++ b/index.html
@@ -16,12 +16,18 @@
       <p>Tiempo: <span id="time">30</span> segundos</p>
     </div>
     <button id="start-button">Iniciar Juego</button>
+
+    <!-- Botones dentro de la tarjeta -->
     <br>
-    <!-- Botón para redirigir al entrenamiento de teclado -->
     <a href="entrenamiento.html">
       <button id="training-button">Ir al Entrenamiento de Teclado</button>
     </a>
+    <br>
+    <a href="entrenamintoDedos.html">
+      <button id="finger-button">Ir al Entrenamiento de columnas</button>
+    </a>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
